--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "sass": "^1.62.1",
     "web-vitals": "^2.1.4"
   },
