--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "clsx": "^1.2.1",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-leaflet": "^4.2.1",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
-    "react-slick": "^0.29.0",
     "sass": "^1.62.1",
     "web-vitals": "^2.1.4"
   },
