--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
+    "gsap": "^3.12.1",
     "leaflet": "^1.9.3",
     "p5": "^1.6.0",
     "react": "^18.2.0",
