--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "leaflet": "^1.9.3",
     "p5": "^1.6.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-draggable": "^4.4.5",
